# eicmcio

./: .gitignore  README.md  codecov.yaml
.github/workflows/: cmake.yml
assets/: beagle_3events.txt
cpp/: CMakeLists.txt
cpp/cmake/: CodeCoverage.cmake
cpp/eicmcio/: BeagleEventData.h  BeagleParticle.h  BeagleReader.cc  BeagleReader.h  CMakeLists.txt  EventRangeController.h  TextEventFileReader.h
cpp/eicmcio/cmake/: eicmcioConfig.cmake.in
cpp/eicmcio/readers/: EventSourceControl.h  StringHelpers.h  TextEventFileReader.h
cpp/eicmcio/readers/beagle_reader/: BeagleEventData.h  BeagleParticle.h  BeagleReader.cc  BeagleReader.h  CMakeLists.txt  JEventSource_beagle.cc  JEventSource_beagle.h
cpp/eicmcio/readers/event_writer/: CMakeLists.txt  EventWriterProcessor.cc  EventWriterProcessor.h  EventWriterRootOutput.h  README.md  event_writer.cc
cpp/eicmcio/readers/eventless_writer/: EventlessProcessor.cc  EventlessProcessor.h  EventlessRootOutput.h  eventless_writer.cc
cpp/eicmcio/readers/g4e_reader/: CMakeLists.txt  Geant4EicEventSource.cc  Geant4EicEventSource.h  GeantHit.h  GeantPrimaryParticle.h  GeantPrimaryVertex.h  GeantTrack.h  README.md  RootEventSelector_1_0.h  RootEventSelector_2_0.h  g4e_reader.cc
cpp/eicmcio/readers/hepmc_reader/: CMakeLists.txt  HepMCEventData.h  JEventSource_hepmc.cc  JEventSource_hepmc.h  hepmc_reader.cc
cpp/eicmcio/readers/hepmc_writer/: CMakeLists.txt  HepMC3WriterProcessor.cc  HepMC3WriterProcessor.h  hepmc_writer.cc
cpp/eicmcio/readers/jleic_gemc_reader/: CMakeLists.txt  GemcFluxHit.h  GemcGenerated.h  GemcRootEvent.h  JEventSource_jleic_root.cc  JEventSource_jleic_root.h  JFactoryGenerator_jleic_root.h  README.md  flux.h  gemc_root_reader.cc  generated.h
cpp/eicmcio/readers/lund_reader/: JEventSource_lund.cc  JEventSource_lund.h  LundEventData.h  LundParticle.h  README.md  lund_reader.cc
cpp/temp/src/: EventInfo.cc  EventInfo.h  EventInfoCollection.cc  EventInfoCollection.h  EventInfoConst.cc  EventInfoConst.h  EventInfoData.h  EventInfoObj.cc  EventInfoObj.h  ExampleCluster.cc  ExampleCluster.h  ExampleClusterCollection.cc  ExampleClusterCollection.h  ExampleClusterConst.cc  ExampleClusterConst.h  ExampleClusterData.h  ExampleClusterObj.cc  ExampleClusterObj.h  ExampleForCyclicDependency1.cc  ExampleForCyclicDependency1.h  ExampleForCyclicDependency1Collection.cc  ExampleForCyclicDependency1Collection.h  ExampleForCyclicDependency1Const.cc  ExampleForCyclicDependency1Const.h  ExampleForCyclicDependency1Data.h  ExampleForCyclicDependency1Obj.cc  ExampleForCyclicDependency1Obj.h  ExampleForCyclicDependency2.cc  ExampleForCyclicDependency2.h  ExampleForCyclicDependency2Collection.cc  ExampleForCyclicDependency2Collection.h  ExampleForCyclicDependency2Const.cc  ExampleForCyclicDependency2Const.h  ExampleForCyclicDependency2Data.h  ExampleForCyclicDependency2Obj.cc  ExampleForCyclicDependency2Obj.h  ExampleHit.cc  ExampleHit.h  ExampleHitCollection.cc  ExampleHitCollection.h  (+91 more)
cpp/tests/: CMakeLists.txt  beagle_sample.txt  catch.cpp  catch.hpp  test_beagle_reader.cpp
doc/docs/: README.md  conf.py  index.rst
docs/: README.md  beagle_file_format.rst  cpp_development.rst  format_pythia6_bnl.rst  index.rst  python_development.rst
python/: .gitignore  3.2.0  MANIFEST.in  packaging.md  pip_readme.md  requirements.txt  run_eicmcio.py  setup.py
python/eicmcio/: __init__.py  detect.py  file_types.py  generic_reader.py  version.py
python/test/: test_detect_mc_type.py  test_generic_reader.py
schema/: eic-common-format.yaml
